Update docker configs

--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,7 @@ services:
       - ./client:/app
     ports:
       - "5173:5173"
+    command: sh -lc "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
 
   php:
     build:
