--- a/compose.tests.yml
+++ b/compose.tests.yml
@@ -6,3 +6,4 @@ services:
     volumes:
       - ./api:/app
     working_dir: /app
+    command: sh -lc "composer install && ./vendor/bin/phpunit --colors=always"
